mas segundos parciales

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /ParcialDecodificador/nbproject/private/
 /ParcialDecodificador/build/
 /ParcialDecodificador/dist/
+/EjercicioGPS/nbproject/private/
+/Compilador Espero que funcione/nbproject/private/
+/Compilador Espero que funcione/build/
+/Compilador Espero que funcione/dist/
+/Parcial2P2/nbproject/private/
+/Parcial2P2/build/
